--- a/speech-therapist.html
+++ b/speech-therapist.html
@@ -114,11 +114,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bayada/jobs/4364310002'>Job Application for Speech Therapist - Home Health at BAYADA Home Health Care</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4364310002'>Job Application for Speech Therapist - Home Health at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/bayada/jobs/4364365002'>Job Application for Speech Language Pathologist (SLP) - Home Health Care at BAYADA Home Health Care</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4364365002'>Job Application for Speech Language Pathologist (SLP) - Home Health Care at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -138,7 +138,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://careers-therapymgmt.icims.com/jobs/6329/full-time-speech-language-pathologist---alexandria%2C-la/job'>Full Time Speech Language Pathologist - Alexandria, LA in ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers-therapymgmt.icims.com/jobs/6329/full-time-speech-language-pathologist---alexandria%2C-la/job'>Full Time Speech Language Pathologist - Alexandria, LA in ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 9, 2019 ... We are committed to making a positive difference in the lives of those we serve. 
 As a physical, occupational, or speech therapist, we will provide you with all the?...</p>
@@ -171,7 +171,7 @@ As a physical, occupational, or speech therapist, we will provide you with all t
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/FeldCareConnects/743999691841521-speech-language-pathologist-slp-needed-for-home-health-in-perris'>FeldCare Connects Speech Language Pathologist (SLP) Needed for Home Health in Perris | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/FeldCareConnects/743999691841521-speech-language-pathologist-slp-needed-for-home-health-in-perris'>FeldCare Connects Speech Language Pathologist (SLP) Needed for Home Health in Perris | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -277,7 +277,7 @@ details?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/accentcare/job/oRptafwD'>AccentCare, Inc.? Careers - Speech Language Pathologist SLP PRN Marble Falls TX</a></h5> 
+<h5><a href='http://jobs.jobvite.com/accentcare/job/oRptafwD'>AccentCare, Inc.? Careers - Speech Language Pathologist SLP PRN Marble Falls TX</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
@@ -309,7 +309,7 @@ details?...</p>
 <p><span class="badge badge-light">San Diego, CA</span></p>
 <p>Posted on: 2019-07-05</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/aces/jobs/1728611'>Job Application for Speech Language Therapist (Potential for Management Opportunities)  at ACES (Autism Comprehensive Educational Services)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/aces/jobs/1728611'>Job Application for Speech Language Therapist (Potential for Management Opportunities)  at ACES (Autism Comprehensive Educational Services)</a></h5> 
 <p><span class="badge badge-light">San Jose, CA</span></p>
 <p>Posted on: 2019-07-05</p>
 <hr/>
@@ -382,7 +382,7 @@ supportive team; Variety of caseload with MBS on site, ENT, ICU and...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-01</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/rocketship/b6ed54b9-1762-47d2-9b2f-9b7fa1e05253'>Rocketship Public Schools - 18-19 Speech and Language Pathologist</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/rocketship/b6ed54b9-1762-47d2-9b2f-9b7fa1e05253'>Rocketship Public Schools - 18-19 Speech and Language Pathologist</a></h5> 
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-07-01</p>
 <hr/>
@@ -406,7 +406,7 @@ supportive team; Variety of caseload with MBS on site, ENT, ICU and...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bayada/jobs/4339346002'>Job Application for Speech Language Pathologist (SLP) - Home Health at BAYADA Home Health Care</a></h5> 
+<h5><a href='https://boards.greenhouse.io/bayada/jobs/4339346002'>Job Application for Speech Language Pathologist (SLP) - Home Health at BAYADA Home Health Care</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-27</p>
 <hr/>
@@ -430,7 +430,7 @@ supportive team; Variety of caseload with MBS on site, ENT, ICU and...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-27</p>
 <hr/>
-<h5><a href='https://lluh.referrals.selectminds.com/jobs/speech-pathologist-1656'>Speech Pathologist - Loma Linda University Careers Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://lluh.referrals.selectminds.com/jobs/speech-pathologist-1656'>Speech Pathologist - Loma Linda University Careers Careers</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-06-27</p>
 <hr/>
@@ -446,7 +446,7 @@ supportive team; Variety of caseload with MBS on site, ENT, ICU and...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/valleyhealth/job/osKc9fwh'>Valley Health Careers - Speech Pathologist PD</a></h5> 
+<h5><a href='https://jobs.jobvite.com/valleyhealth/job/osKc9fwh'>Valley Health Careers - Speech Pathologist PD</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-26</p>
 <hr/>
